--- a/src/notebooks/clustering.ipynb
+++ b/src/notebooks/clustering.ipynb
@@ -218,7 +218,7 @@
    },
    "outputs": [],
    "source": [
-    "var servicename = \"cosmosdb\"; // \"aks\"  or \"cosmosdb\"\n",
+    "var servicename = \"fabric\"; // \"aks\"  or \"cosmosdb\" or \"fabric\" or \"adf\"\n",
     "var jsonFilePath = $\"{dataRoot}/{servicename}.json\";\n",
     "var jsonString = File.ReadAllText(jsonFilePath);\n",
     "var feedbackRecords = JsonSerializer.Deserialize<List<FeedbackRecord>>(jsonString);\n",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -493,10 +493,10 @@
     "                Console.WriteLine($\"JSON deserialization error: {ex.Message}\");\n",
     "            }\n",
     "        // break after 3\n",
-    "        if (count == 3)\n",
-    "        {\n",
-    "            break;\n",
-    "        }\n",
+    "        // if (count == 3)\n",
+    "        // {\n",
+    "        //     break;\n",
+    "        // }\n",
     "    }\n",
     "\n",
     "    return sortedClusters;\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -625,8 +625,60 @@
    },
    "outputs": [],
    "source": [
-    "var outputPath = $\"{dataRoot}{servicename}-clusters.json\";  // Define the output file path\n",
+    "var outputPath = $\"{dataRoot}/{servicename}-clusters.json\";  // Define the output file path\n",
     "await SaveClustersToJsonAsync(clusterList, outputPath);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string jsonString = File.ReadAllText(outputPath);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "var options = new JsonSerializerOptions\n",
+    "{\n",
+    "    PropertyNameCaseInsensitive = true\n",
+    "};\n",
+    "\n",
+    "    List<ServiceCluster> clusters = JsonSerializer.Deserialize<List<ServiceCluster>>(jsonString, options);\n",
+    "\n",
+    "    // Process each cluster to generate initiative ideas\n",
+    "    foreach (var cluster in clusters)\n",
+    "    {\n",
+    "        // Extract necessary information\n",
+    "        string clusterId = cluster.ClusterId;\n",
+    "        string commonElement = cluster.CommonElement;\n",
+    "        int similarFeedbacks = cluster.SimilarFeedbacks;\n",
+    "        int distinctCustomers = cluster.DistinctCustomers;\n",
+    "        string summary = cluster.Summary;\n",
+    "\n",
+    "        // Generate initiative idea\n",
+    "        string initiativeIdea = $\"Initiative Idea for Cluster {clusterId}:\\n\" +\n",
+    "            $\"- **Focus Area**: {commonElement}\\n\" +\n",
+    "            $\"- **Description**: {summary}\\n\" +\n",
+    "            $\"- **Potential Impact**: Addresses feedback from {similarFeedbacks} similar feedback items across {distinctCustomers} customers.\\n\";\n",
+    "\n",
+    "        // Output the initiative idea\n",
+    "        Console.WriteLine(initiativeIdea);\n",
+    "        Console.WriteLine(new string('*', 50));\n",
+    "    }\n"
    ]
   }
  ],
