--- a/src/notebooks/summary.ipynb
+++ b/src/notebooks/summary.ipynb
@@ -227,6 +227,12 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
