cli + cluster research

--- a/src/notebooks/clustering.ipynb
+++ b/src/notebooks/clustering.ipynb
@@ -437,7 +437,7 @@
     "{\n",
     "    public string CommonElement { get; set; }\n",
     "    public string Summary { get; set; }\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -670,6 +670,94 @@
    "source": [
     "var outputPath = $\"{dataRoot}/{servicename}-clusters-full.json\";  // Define the output file path\n",
     "await SaveClustersToJsonAsync(clusterList, outputPath, cleanEmbeddings: false);  // Save the full cluster data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing with DBSCAN\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>ai.scikitlearn4net, 0.0.4</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#r \"nuget: ai.scikitlearn4net\" \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(3,15): error CS0234: The type or namespace name 'Clustering' does not exist in the namespace 'SkLearn' (are you missing an assembly reference?)\n(24,18): error CS0246: The type or namespace name 'DBSCAN' could not be found (are you missing a using directive or an assembly reference?)\n(30,17): error CS0019: Operator '<' cannot be applied to operands of type 'int' and 'method group'",
+     "output_type": "error",
+     "traceback": [
+      "(3,15): error CS0234: The type or namespace name 'Clustering' does not exist in the namespace 'SkLearn' (are you missing an assembly reference?)\n",
+      "(24,18): error CS0246: The type or namespace name 'DBSCAN' could not be found (are you missing a using directive or an assembly reference?)\n",
+      "(30,17): error CS0019: Operator '<' cannot be applied to operands of type 'int' and 'method group'"
+     ]
+    }
+   ],
+   "source": [
+    "// using Accord.Math;\n",
+    "// using Accord.Statistics.Distributions;\n",
+    "using SkLearn.Clustering;\n",
+    "\n",
+    "// Sample data (replace with your actual data)\n",
+    "double[][] dataPoints = new double[][]\n",
+    "{\n",
+    "    new double[] { 1, 2 },\n",
+    "    new double[] { 1.5, 2.5 },\n",
+    "    new double[] { 3, 4 },\n",
+    "    new double[] { 4, 5 },\n",
+    "    new double[] { 4, 3 },\n",
+    "    new double[] { 5, 4 },\n",
+    "    new double[] { 10, 10 },\n",
+    "    new double[] { 11, 11 },\n",
+    "    new double[] { 12, 12 }\n",
+    "};\n",
+    "\n",
+    "// Define DBSCAN parameters\n",
+    "double eps = 1.0; // Epsilon (radius)\n",
+    "int minSamples = 5; // Minimum number of samples in a cluster\n",
+    "\n",
+    "// Create a DBSCAN instance\n",
+    "var dbscan = new DBSCAN(eps: eps, minSamples: minSamples);\n",
+    "\n",
+    "// Perform clustering\n",
+    "var labels = dbscan.FitPredict(dataPoints);\n",
+    "\n",
+    "// Print cluster assignments\n",
+    "for (int i = 0; i < dataPoints.Count; i++)\n",
+    "{\n",
+    "    Console.WriteLine($\"Data Point {i+1}: Cluster {labels[i]}\");\n",
+    "}"
    ]
   }
  ],
