--- a/src/notebooks/summary.ipynb
+++ b/src/notebooks/summary.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -30,7 +30,17 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>CsvHelper, 33.0.1</span></li><li><span>DotNetEnv, 2.5.0</span></li></ul></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#r \"nuget: CsvHelper\"\n",
     "#r \"nuget: DotNetEnv, 2.5.0\""
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -66,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -94,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -124,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -147,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -225,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -243,7 +253,7 @@
     "{\n",
     "    var serviceMappingsConfig = new ServiceMappingConfig\n",
     "    {\n",
-    "        ServicesMappings = new List<ServiceDescriptor>()\n",
+    "        Services = new List<ServiceDescriptor>()\n",
     "    };\n",
     "\n",
     "    foreach (var service in services)\n",
@@ -256,7 +266,7 @@
     "\n",
     "            // Determine if we already have a mapping for this service\n",
     "            var firstRecord = records.FirstOrDefault();\n",
-    "            if (firstRecord != null && !serviceMappingsConfig.ServicesMappings.Any(s => s.MarketingName == firstRecord.ServiceName))\n",
+    "            if (firstRecord != null && !serviceMappingsConfig.Services.Any(s => s.MarketingName == firstRecord.ServiceName))\n",
     "            {\n",
     "                // Add the service descriptor with necessary fields\n",
     "                var serviceDescriptor = new ServiceDescriptor\n",
@@ -271,7 +281,7 @@
     "                    }\n",
     "                };\n",
     "\n",
-    "                serviceMappingsConfig.ServicesMappings.Add(serviceDescriptor);\n",
+    "                serviceMappingsConfig.Services.Add(serviceDescriptor);\n",
     "            }\n",
     "        }\n",
     "    }\n",
