--- a/src/notebooks/clustering.ipynb
+++ b/src/notebooks/clustering.ipynb
@@ -682,25 +682,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>ai.scikitlearn4net, 0.0.4</span></li></ul></div></div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#r \"nuget: ai.scikitlearn4net\" \n",
+    "#r \"nuget: Accord.Math\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "using Accord.Math;\n",
+    "\n",
+    "// Create a simple matrix\n",
+    "var matrix = Matrix.Create(new double[,] { { 1, 2 }, { 3, 4 } }); \n",
+    "\n",
+    "// Print the matrix\n",
+    "Console.WriteLine(matrix.ToString<double>()); \n",
+    "\n",
+    "// Perform a simple matrix operation (e.g., transpose)\n",
+    "// var transposedMatrix = matrix.Transpose(); \n",
+    "\n",
+    "// // Print the transposed matrix\n",
+    "// Console.WriteLine(transposedMatrix); "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#r \"nuget: ScikitLearn\" \n",
+    "#r \"nuget: Accord.NET\" \n",
     "\n"
    ]
   },
@@ -708,26 +757,59 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "(3,15): error CS0234: The type or namespace name 'Clustering' does not exist in the namespace 'SkLearn' (are you missing an assembly reference?)\n(24,18): error CS0246: The type or namespace name 'DBSCAN' could not be found (are you missing a using directive or an assembly reference?)\n(30,17): error CS0019: Operator '<' cannot be applied to operands of type 'int' and 'method group'",
-     "output_type": "error",
-     "traceback": [
-      "(3,15): error CS0234: The type or namespace name 'Clustering' does not exist in the namespace 'SkLearn' (are you missing an assembly reference?)\n",
-      "(24,18): error CS0246: The type or namespace name 'DBSCAN' could not be found (are you missing a using directive or an assembly reference?)\n",
-      "(30,17): error CS0019: Operator '<' cannot be applied to operands of type 'int' and 'method group'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "// using Accord.Math;\n",
-    "// using Accord.Statistics.Distributions;\n",
-    "using SkLearn.Clustering;\n",
+    "#r \"nuget: ai.scikitlearn4net\" \n",
+    "using SkLearn; \n",
+    "\n",
+    "Console.WriteLine($\"Scikit-learn Version: {typeof(SkLearn.Base.BaseEstimator).Assembly.GetName().Version}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using SkLearn.Cluster; \n",
+    "using Accord.Math; \n",
     "\n",
     "// Sample data (replace with your actual data)\n",
     "double[][] dataPoints = new double[][]\n",
@@ -747,14 +829,17 @@
     "double eps = 1.0; // Epsilon (radius)\n",
     "int minSamples = 5; // Minimum number of samples in a cluster\n",
     "\n",
+    "// Convert data to Matrix<double>\n",
+    "var dataMatrix = new Matrix<double>(dataPoints); \n",
+    "\n",
     "// Create a DBSCAN instance\n",
     "var dbscan = new DBSCAN(eps: eps, minSamples: minSamples);\n",
     "\n",
     "// Perform clustering\n",
-    "var labels = dbscan.FitPredict(dataPoints);\n",
+    "var labels = dbscan.FitPredict(dataMatrix); \n",
     "\n",
     "// Print cluster assignments\n",
-    "for (int i = 0; i < dataPoints.Count; i++)\n",
+    "for (int i = 0; i < dataPoints.Length; i++) \n",
     "{\n",
     "    Console.WriteLine($\"Data Point {i+1}: Cluster {labels[i]}\");\n",
     "}"
